--- a/components/modules/HeadlineModule/index.scss
+++ b/components/modules/HeadlineModule/index.scss
@@ -1,7 +1,6 @@
 .wrapper {
 	display: grid;
 	grid-template-rows: auto 20vh;
-	grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
 }
 
 .title {
@@ -38,10 +37,11 @@
 }
 
 .box {
-	position: fixed;
+	position: absolute;
 	z-index: -2;
 	background-color: #D1B5DB;
 	width: 515px;
-	height: 100%;
+	height: 900px;
 	left: 510px;
+	top: 0;
 }
