--- a/components/modules/Collage/Collage.scss
+++ b/components/modules/Collage/Collage.scss
@@ -1,10 +1,13 @@
 .wrapper {
     display: grid;
-    grid-template-columns: none;
-    grid-template-rows: 100vh;
+    grid-template-columns: repeat(10, 10vw);
+    grid-template-rows: repeat(10, 10vw);
 }
 
 .title {
+    grid-row-start: 3;
+    grid-row-end: 6;
+    grid-column-start: 1;
     align-self: center;
     width: 20vw;
     word-wrap: break-word;
@@ -14,4 +17,22 @@
     font-size: 13vw;
     line-height: 105.2%;
     letter-spacing: 0.065em;
+}
+
+.image1 {
+    grid-column-start: 6;
+    grid-column-end: 8;
+    grid-row-start: 2;
+    grid-row-end: 5;
+    align-self: flex-end;
+    width: 20vw;
+}
+
+.image2 {
+    grid-column-start: 4;
+    grid-column-end: 8;
+    grid-row-start: 5;
+    grid-row-end: 8;
+    align-self: flex-start;
+    width: 30vw;
 }
