--- a/components/modules/HeadlineModule/index.scss
+++ b/components/modules/HeadlineModule/index.scss
@@ -1,5 +1,53 @@
 .wrapper {
 	display: grid;
 	grid-template-rows: auto 20vh;
+	font-family: 'Roboto', sans-serif;
+	font-style: normal;
 }
 
+.title {
+	width: min-content;
+	align-self: center;
+	margin-left: 250px;
+	margin-top: 3vh;
+	grid-row-start: 1;
+	font-size: 13vw;
+	font-weight: bold;
+	line-height: 90%;
+	letter-spacing: 0.065em;
+	word-wrap: break-word;
+	width: 60vw;
+}
+
+.subtitle {
+	align-self: center;
+	width: 50vw;
+	margin-left: 250px;
+	font-weight: bold;
+	line-height: 142.69%;
+	letter-spacing: 0.285em;
+	font-size: 3.1vw;
+	grid-row-start: 2;
+}
+
+.box {
+	position: absolute;
+	z-index: -2;
+	width: 655px;
+	height: 70vw;
+	left: 585px;
+	top: 0;
+}
+
+.button {
+	position: absolute;
+    top: 3vw;
+    left: 90vw;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 105.2%;
+    letter-spacing: 0.065em;
+}
