created article component

--- a/components/modules/Collage/Collage.scss
+++ b/components/modules/Collage/Collage.scss
@@ -1,3 +1,14 @@
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1.2);
+  }
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: repeat(10, 10vw);
@@ -21,16 +32,17 @@
 
 .project {
   grid-column-start: 4;
-  grid-row-start: 3;
+  grid-row-start: 4;
   writing-mode: vertical-rl;
   text-orientation: mixed;
   line-height: 105.2%;
   letter-spacing: 0.065em;
-  font-size: 6.5vw;
+  font-size: 6vw;
 }
 
 .project:hover {
-  color: #ffcbcb;
+  animation: scale-up-center 0.1s linear;
+  animation-fill-mode: forwards;
 }
 
 .project2 {
@@ -39,6 +51,11 @@
   line-height: 105.2%;
   letter-spacing: 0.065em;
   font-size: 9vw;
+}
+
+.project2:hover {
+  animation: scale-up-center 0.1s linear;
+  animation-fill-mode: forwards;
 }
 
 .project3 {
@@ -50,17 +67,34 @@
   letter-spacing: 0.065em;
   font-size: 10vw;
 }
+
+.project3:hover {
+  animation: scale-up-center 0.1s linear;
+  animation-fill-mode: forwards;
+}
+
 .project4 {
   grid-column-start: 6;
   grid-row-start: 5;
   line-height: 105.2%;
   letter-spacing: 0.065em;
-  font-size: 12vw;
+  font-size: 9vw;
 }
+
+.project4:hover {
+  animation: scale-up-center 0.1s linear;
+  animation-fill-mode: forwards;
+}
+
 .project5 {
   grid-column-start: 2;
   grid-row-start: 8;
   line-height: 105.2%;
   letter-spacing: 0.065em;
-  font-size: 8vw;
+  font-size: 6vw;
+}
+
+.project5:hover {
+  animation: scale-up-center 0.1s linear;
+  animation-fill-mode: forwards;
 }
